After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784674 - v4l2: Aspect Ratio probe does not work
v4l2: Aspect Ratio probe does not work
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-07 21:14 UTC by Nicolas Dufresne (ndufresne)
Modified: 2017-07-18 18:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
v4l2object: Only check CROPCAP for par once (2.93 KB, patch)
2017-07-14 20:23 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2017-07-07 21:14:24 UTC
In the GstV4l2Object we try and probe the pixel aspect ratio, but (at least with UVC driver) the passed width/height is totally ignore and replaced by the currently setup width height. That has the side effect that the ratio is never the one we expect. We will need to re-read the v4l2 spec around VIDIOC_CROPCAP.
Comment 1 Nicolas Dufresne (ndufresne) 2017-07-14 17:48:19 UTC
Basically, the spec says that the aspect ratio is stable for the same TV standard. tv-norm in 1.0 has been a no-op since the start, so it means the aspect ratio can only be fixed for nodes handled by Gst. We should pull out the cropcap burried into the deepest probe function, and just call this once, save it in the GstV4l2Object and badger all structures with it. Except of course for encoded formats and for GstV4l2Transform element.
Comment 2 Nicolas Dufresne (ndufresne) 2017-07-14 20:23:26 UTC
Created attachment 355628 [details] [review]
v4l2object: Only check CROPCAP for par once

The pixel aspect ratio is documented to not change unless the TV
Standard is changed. So this mean that this will be uniform across all
possible format and resolutions.
Comment 3 Nicolas Dufresne (ndufresne) 2017-07-18 16:14:32 UTC
Attachment 355628 [details] pushed as 0864399 - v4l2object: Only check CROPCAP for par once